// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`crop > full height from left 1`] = `
  
 ◆
◆▦
 ◆
  
`;

exports[`crop > full height from middle 1`] = `
◆◆
▦▦
▦▦
▦▦
◆◆
`;

exports[`crop > full height from right 1`] = `
  
◆ 
▦◆
◆ 
  
`;

exports[`crop > full width from bottom 1`] = `
 ◆▦▦◆ 
  ◆◆  
`;

exports[`crop > full width from middle 1`] = `
◆▦▦▦▦◆
 ◆▦▦◆ 
`;

exports[`crop > full width from top 1`] = `
  ◆◆  
 ◆▦▦◆ 
`;
